base: add back weather parts [1/3]
Change-Id: I7568be52af6ea966c8304f47b0601740b51d6c55
Signed-off-by: Dmitrii <bankersenator@gmail.com>

base: SystemUI: keyguard weather view [1/3]

Change-Id: Idbedea20d5487a42849c225e3f500aa1f0282c6c
Signed-off-by: Dmitrii <bankersenator@gmail.com>

base: SystemUI: keyguard weather view - fix initial kick off after boot

Change-Id: I64c5082ed675549d67728bcd7a8e19c09c7a21e7
Signed-off-by: Dmitrii <bankersenator@gmail.com>

base: SystemUI: fix keyguard weather color update

Change-Id: I9bb9861d824b44fb2d1e91dd61e731838a0c84ac
Signed-off-by: Dmitrii <bankersenator@gmail.com>

base: SystemUI: make keyguard weather icon smaller

Change-Id: Ib9d1f23dd92a569e5eff419c80a1aa41ebdc4d41
Signed-off-by: Dmitrii <bankersenator@gmail.com>

base: add weather to keyguardSlice

Thanks to Henrique Silva <jhenrique09.mcz@hotmail.com>
for the keyguard slice code

Revamped and adapted to Omnijaws base
and adapted to 10, 11, 12 by @eyosen

Change-Id: I4232d8dea7ee54dc35869abb86b6b5c3e7820166
Signed-off-by: Dmitrii <bankersenator@gmail.com>

base: SystemUI: add keyguard weather style (1/2)

Choose from Omni style with dedicated line of
location, conditionimage, temperature
or KeygardSlice style added to the dateline with
conditionimage, temperature. Care is taken to properly
display in ambient display, and ambient music.

Change-Id: I6f09967843d360a82b6c98b8e3d1c9a269af798f
Signed-off-by: Dmitrii <bankersenator@gmail.com>

SystemUI: keyguardslice code cleanup

Change-Id: Icdfc9a56303bdae94fc0c739b3af548306f71fb4
Signed-off-by: Dmitrii <bankersenator@gmail.com>

WeatherTile: Do not show if not installed

Change-Id: I786b29a6adb1adf330f5011636878e9907f296c9
Signed-off-by: Dmitrii <bankersenator@gmail.com>

SystemUI: make qs weather page follow system font setting

looks out of place else

Change-Id: Ib4108832d93755086a007cfb9c719b9fdc454eb0
Signed-off-by: Dmitrii <bankersenator@gmail.com>

core: move OmniJaws client to its new home

Also includes
	Grant de

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -360,6 +360,9 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.PREVENT_POWER_KEY" />
 
+    <!-- OmniJaws -->
+    <uses-permission android:name="org.omnirom.omnijaws.READ_WEATHER" />
+
     <!-- LiveDisplay -->
     <uses-permission android:name="lineageos.permission.MANAGE_LIVEDISPLAY" />
     <uses-permission android:name="lineageos.permission.HARDWARE_ABSTRACTION_ACCESS" />
